fix: user contributions list (#75)
* set default text color

* card add prefix prop

* mock user contributions list

* fix: gap

* fix: padding

* tailwind scrollbar

* fix: user tabs scroll

--- a/projects/16-open-qf/src/site/styles/globals.css
+++ b/projects/16-open-qf/src/site/styles/globals.css
@@ -69,5 +69,5 @@ html {
   font-size: unset;
 }
 body {
-  @apply bg-fill-bg-secondary antialiased;
+  @apply text-text-primary bg-fill-bg-secondary antialiased;
 }
